# ibm_granite_projects

./: .gitignore  README.md  ibm_granite_speech_code-plan.md  ibm_granite_speech_ui_preview.html
ibm_granite_speech/backend/: pyproject.toml  transcript.txt
ibm_granite_speech/backend/src/: main.py
ibm_granite_speech/backend/src/api/: routes.py
ibm_granite_speech/backend/src/schemas/: models.py
ibm_granite_speech/backend/src/service/: analysis_service.py  model_connector.py
ibm_granite_speech/backend/src/utils/: config.py
ibm_granite_speech/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
ibm_granite_speech/frontend/.next/: trace
ibm_granite_speech/frontend/.next/cache/: .tsbuildinfo
ibm_granite_speech/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
ibm_granite_speech/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
ibm_granite_speech/frontend/.next/server/vendor-chunks/: @swc.js  next.js
ibm_granite_speech/frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
ibm_granite_speech/frontend/.next/static/webpack/: webpack.04f8b9e771e2d2a9.hot-update.js  webpack.498183cd63adf356.hot-update.js  webpack.552bdb2c60d959c1.hot-update.js  webpack.574179cab032570f.hot-update.js  webpack.5c5684ee146b1a06.hot-update.js  webpack.6be50f06a6e0e5d6.hot-update.js  (+5 more)
ibm_granite_speech/frontend/app/: globals.css  layout.tsx  page.tsx
ibm_granite_speech/frontend/components/: AudioRecorder.tsx  FileUpload.tsx  KeywordTags.tsx  ResultsPanel.tsx  SentimentChart.tsx
(+21 files in other folders)
