[project]
name = "ibm-granite-speech-backend"
version = "0.1.0"
description = "IBM Granite Speech analysis backend — transcription, sentiment, keywords, summarization"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # MLX speech transcription (Apple Silicon)
    "mlx-audio>=0.1.0",
    "mlx>=0.22.0",

    # Audio preprocessing
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",

    # NLP — sentiment (VADER), keywords (YAKE), summarization (sumy)
    "vaderSentiment>=3.3.2",
    "yake>=0.4.8",
    "sumy>=0.11.0",
    "nltk>=3.9.0",

    # Config & validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
